tests/baselines/reference/instanceMemberAssignsToStructPrototype_basic.errors.txt
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/instanceMemberAssignsToStructPrototype_basic.ts(7,9): error TS2322: Type '() => void' is not assignable to type '(x: number) => number':
  Type 'void' is not assignable to type 'number'.


==== tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/instanceMemberAssignsToStructPrototype_basic.ts (1 errors) ====
    struct C {
        foo() {
            C.prototype.foo = () => { }
        }
    
        bar(x: number): number {
            C.prototype.bar = () => { } // error, Type '() => void' is not assignable to type '(x: number) => number'
            ~~~~~~~~~~~~~~~
!!! error TS2322: Type '() => void' is not assignable to type '(x: number) => number':
!!! error TS2322:   Type 'void' is not assignable to type 'number'.
            C.prototype.bar = (x) => x; // ok
            C.prototype.bar = (x: number) => 1; // ok
            return 1;
        }
    }